<resources>
    <string name="app_name">W10_Navigation</string>

    <!--<string name="button">Button</string>-->
    <string name="bt01">Display Image 1</string>
    <string name="bt02">Display Image 2</string>
    <string name="bt03">Display Image 3</string>

    <string name="ivImage01">Image 1</string>
    <string name="ivImage02">Image 2</string>
    <string name="ivImage03">Image 3</string>

    <string name="name"></string>

    <string name="argText">Title Goes Here</string>
    <string name="argImage">Image Goes Here</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>