<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainFragment">

    <Button
        android:id="@+id/bt01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt01"
        app:layout_constraintBottom_toTopOf="@+id/bt02"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ivImage01"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread" />

    <Button
        android:id="@+id/bt02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt02"
        app:layout_constraintBottom_toTopOf="@+id/bt03"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ivImage02"
        app:layout_constraintTop_toBottomOf="@+id/bt01" />

    <Button
        android:id="@+id/bt03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt03"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ivImage03"
        app:layout_constraintTop_toBottomOf="@+id/bt02" />

    <ImageView
        android:id="@+id/ivImage01"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/ivImage01"
        app:srcCompat="@drawable/android_image_1"
        app:layout_constraintBottom_toTopOf="@+id/ivImage02"
        app:layout_constraintEnd_toStartOf="@+id/bt01"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/ivImage02"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/ivImage02"
        app:srcCompat="@drawable/android_image_2"
        app:layout_constraintBottom_toTopOf="@+id/ivImage03"
        app:layout_constraintEnd_toStartOf="@+id/bt02"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivImage01"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/ivImage03"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/ivImage03"
        app:srcCompat="@drawable/android_image_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bt03"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivImage02"
        tools:ignore="ImageContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>